--- a/01-intro.Rmd
+++ b/01-intro.Rmd
@@ -18,4 +18,4 @@ knitr::kable(
 )
 ```
 
-You can write citations, too. For example, we are using the **bookdown** package [@R-bookdown] in this sample book, which was built on top of R Markdown and **knitr** [@xie2015].
+You can write citations, too.Or, if you don't know what you're doing, ask Dr. Macfarlane for help. For example, we are using the **bookdown** package [@R-bookdown] in this sample book, which was built on top of R Markdown and **knitr** [@xie2015].
