--- a/index.Rmd
+++ b/index.Rmd
@@ -1,34 +1,17 @@
 --- 
-title: "A Minimal Book Example"
-author: "Yihui Xie"
+title: "Pokemon: A Brief Introduction to Starters"
+author: "Benjamin Meek"
 date: "`r Sys.Date()`"
 site: bookdown::bookdown_site
 documentclass: book
 bibliography: [book.bib, packages.bib]
 biblio-style: apalike
 link-citations: yes
-description: "This is a minimal example of using the bookdown package to write a book. The output format for this example is bookdown::gitbook."
+description: "Welcome to the wonderful world of Pokemon! This book is simply a practice book for a newcomer to RStudio, GitHub and bookdown. I apologize in advance for any mistakes in formatting, citation, or proper attributing to the Pokemon Co. and Nintendo. Enjoy!"
 ---
 
-# Prerequisites
+# Introduction {#intro}
 
-This is a _sample_ book written in **Markdown**. You can use anything that Pandoc's Markdown supports, e.g., a math equation $a^2 + b^2 = c^2$.
+Since this is a book about **Pokemon**, some of the tools I need to practice using are a little hard to include, like *math equations*. Currently there are $8*3+2=26$ starter Pokemon. There are 8 generations, with three starter Pokemon in each gen, for a total of 24, as well as a single starter for the *Let's Go Pikachu* and *Let's Go Eevee games*. 
 
-The **bookdown** package can be installed from CRAN or Github:
-
-```{r eval=FALSE}
-install.packages("bookdown")
-# or the development version
-# devtools::install_github("rstudio/bookdown")
-```
-
-Remember each Rmd file contains one and only one chapter, and a chapter is defined by the first-level heading `#`.
-
-To compile this example to PDF, you need XeLaTeX. You are recommended to install TinyTeX (which includes XeLaTeX): <https://yihui.org/tinytex/>.
-
-```{r include=FALSE}
-# automatically create a bib database for R packages
-knitr::write_bib(c(
-  .packages(), 'bookdown', 'knitr', 'rmarkdown'
-), 'packages.bib')
-```
+For more information on any of the Pokemon discussed in this book, a great resource is the fan wiki, [Bulbapedia](https://bulbapedia.bulbagarden.net/wiki/Starter_Pok%C3%A9mon). The [Nintendo](https://www.nintendo.com/) website also includes regular updates on new games in the Pokemon franchise, which would mean the addition of more starters! For more about the basics, see Chapter \@ref(basics).
